finished ffmpeg testing